--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,6 @@
 {
-  "compilerOptions": {
-      "experimentalDecorators": true
-  }
+    "compilerOptions": {
+        "experimentalDecorators": true
+    },
+    "exclude": ["node_modules"]
 }
